--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -9,15 +9,15 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link type="text/css" href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
     <!-- Подключение favicon.io -->
-    <link rel="apple-touch-icon" sizes="180x180" href="static/files/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/files/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/files/favicon/favicon-16x16.png">
-    <link rel="manifest" href="static/files/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/files/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/files/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/files/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/static/files/favicon/site.webmanifest">
 
     {% block title %}
 
     {% if title %}
-    <title>Коммуналка - {{ title }}</title>
+    <title>{{ title }}</title>
     {% else %}
     <title>Коммуналка</title>
     {% endif %}
@@ -26,25 +26,105 @@
 </head>
 
 <body>
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 col-md-12 px-0">
+                    <!-- Navigation -->
+                    <nav class="navbar navbar-expand-lg">
+                        <div class="container-fluid">
+                            <!-- <a class="navbar-brand" href="#">Коммуналка</a> -->
+                            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNav">
 
-    {% block content %}
-    {% block mainmenu %}
-    <ul class="mainmenu">
-        {%- for m in menu -%}
-        <li><a href="{{ m.url }}">{{ m.name }}</a></li>
-        {%- endfor -%}
-    </ul>
-    {% endblock mainmenu %}
+                                {% block mainmenu %}
+                                <ul class="navbar-nav">
 
-    <div class="content">
-        <p>{{ url }}</p>
-        {% if title %}
-        <h1>{{ title }}</h1>
-        {% else %}
-        <h1>Flask project</h1>
-        {% endif %}
-        {% endblock %}
-    </div>
+                                    {%- for m in menu -%}
+                                    {% if m.url == url%}
+                                    <li class="nav-item px-2">
+                                        <a class="nav-link active" aria-current="page" href="{{ m.url }}">{{ m.name
+                                            }}</a>
+                                    </li>
+                                    {% else %}
+                                    <li class="nav-item px-2">
+                                        <a class="nav-link" href="{{ m.url }}">{{ m.name }}</a>
+                                    </li>
+                                    {% endif%}
+                                    {%- endfor -%}
+
+                                </ul>
+                                {% endblock mainmenu %}
+                            </div>
+                        </div>
+                    </nav>
+                    <!-- End navigation -->
+                    <nav aria-label="breadcrumb" class="breadcrumbs-nav">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item active" aria-current="page">{{ url }}</li>
+                        </ol>
+                    </nav>
+                </div>
+                <div class="col-lg-2"></div>
+            </div>
+        </div>
+    </header>
+
+    <section class="mt-4">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 col-md-12">
+                    <!-- Content -->
+                    <div class="content">
+                        {% block content %}
+                        <!-- <p>{{ url }}</p> -->
+                        {% if title %}
+                        <h1>{{ title }}</h1>
+                        {% else %}
+                        <h1>Flask project</h1>
+                        {% endif %}
+                        {% endblock %}
+                    </div>
+                    <!-- End content -->
+                </div>
+                <div class="col-lg-2"></div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="mt-4">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8 col-md-12">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-12 footer-text text-center">
+                            <p><a href="https://t.me/GrigoriyKuzevanov" target="_blank"><img
+                                style="width: 30px; margin-inline: 1em;" src="/static/files/Telegram_logo.png"
+                                alt="Telegram logo">t.me/GrigoriyKuzevanov</a></p>
+                        </div>
+                        <div class="col-lg-4 col-md-12 footer-text text-center">
+                            <p><a href="https://github.com/GrigoriyKuzevanov"><img
+                                        style="width: 30px; margin-inline: 1em;" src="/static/files/GitHub_logo.png"
+                                        alt="GitHub logo">github.com/GrigoriyKuzevanov</a></p>
+                        </div>
+                        <div class="col-lg-4 col-md-12 footer-text text-center">
+                            <p><a href="mailto:grkuzevanov@gmail.com"><img
+                                style="width: 30px; margin-inline: 1em;" src="/static/files/Email_logo.png"
+                                alt="Email logo">grkuzevanov@gmail.com</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2"></div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Подюключение bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
