--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -80,6 +80,19 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 col-md-12">
+                    <!-- Flash messages -->
+                    <div class="flash">
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                        <ul>
+                            {% for message in messages %}
+                            <li>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                        {% endwith %}
+                    </div>
+                    <!-- End flash messages -->
                     <!-- Content -->
                     <div class="content">
                         {% block content %}
