--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -4,8 +4,17 @@
 {{ super() }}
 
 <form action="/login" method="post">
-    <p><label>Имя: </label><input type="text" name="username" value="" required></p>
-    <p><label>Пароль: </label><input type="password" name="psw" value="" required></p>
-    <p><input type="submit" value="Войти"></p>
+    {{ form.hidden_tag() }}
+    <p>
+        {{ form.username.label(class='label') }}
+        {{ form.username(size=32) }}
+    </p>
+    <p>
+        {{ form.password.label }}
+        {{ form.password(size=32) }}
+    </p>
+    <p>
+        {{ form.submit() }}
+    </p>
 </form>
 {% endblock %}
