--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -14,7 +14,13 @@
         {{ form.password(size=32) }}
     </p>
     <p>
+        {{ form.remember_me.label }}
+        {{ form.remember_me }}
+    </p>
+    <p>
         {{ form.submit() }}
     </p>
 </form>
+
+<p><a href="{{ url_for('register') }}" >Зарегистрироваться</a></p>
 {% endblock %}
