--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -3,6 +3,13 @@
 {% block content %}
 {{ super() }}
 
-<p>Содержимое главной страницы</p>
+{% if current_user.is_authenticated %}
+<h2>Добро пожаловать на сайт, {{ current_user }}!</h2>
+{% else %}
+<h2>Добро пожаловать на сайт!</h2>
+{% endif %}
+{% if current_user.is_anonymous %}
+<p><a href="{{ url_for('login') }}">Войдите на сайт</a> чтобы получить доступ к функционалу</p>
+{% endif %}
 
 {% endblock %}
