--- a/my_app/templates/register.html
+++ b/my_app/templates/register.html
@@ -6,7 +6,7 @@
 <h1>Регистрация</h1>
 <form action="/register" method="post">
     {{ form.hidden_tag() }}
-    {% for f in form %}
+    {% for f in form if f.widget.input_type != 'hidden' %}
     <p>
         {{ f.label }}
         {{ f }}
