--- a/my_app/static/css/styles.css
+++ b/my_app/static/css/styles.css
@@ -3,6 +3,7 @@
 body {
     font-family: 'Open Sans', serif;
     background: linear-gradient(200deg, #5c7db2 0%, #ffffff 100%);
+    color:rgb(8, 17, 69);
 }
 
 /* Navigation */
@@ -69,3 +70,31 @@ body {
     text-decoration: none;
 }
 
+/* Content */
+.flash ul {
+    list-style-type: none;
+    background-color: #5c7db2;
+    color: bisque;
+}
+
+form .btn-primary {
+    color: bisque;
+    background-color: #5c7db2;
+    border-color: rgb(8, 17, 69);
+}
+
+form .btn-primary:hover {
+    background-color: #4c73b2;
+}
+
+.link {
+    text-decoration:underline;
+    color: rgb(8, 17, 69);
+}
+
+.tip {
+    /* border-style: solid;
+    border-width: 1px; */
+    font-style: italic;
+    font-size: smaller;
+}
