--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -55,12 +55,13 @@
                                     <li class="nav-item px-2">
                                         <a class="nav-link" href="{{ m.url }}">{{ m.name }}</a>
                                     </li>
-                                    {% endif%}                                  
+                                    {% endif%}
                                     {%- endfor -%}
 
                                     {% if current_user.is_anonymous and url == url_for('login') %}
                                     <li class="nav-item px-2">
-                                        <a class="nav-link active" aria-current="page" href="{{ url_for('login') }}">Войти</a>
+                                        <a class="nav-link active" aria-current="page"
+                                            href="{{ url_for('login') }}">Войти</a>
                                     </li>
                                     {% elif current_user.is_anonymous %}
                                     <li class="nav-item px-2">
@@ -68,29 +69,36 @@
                                     </li>
                                     {% elif url == url_for('logout') %}
                                     <li class="nav-item px-2">
-                                        <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Выйти</a>
+                                        <a class="nav-link active" aria-current="page"
+                                            href="{{ url_for('logout') }}">Выйти</a>
                                     </li>
                                     <li class="nav-item px-2">
-                                        <a class="nav-link" href="{{ url_for('profile', username = current_user.username) }}">Профиль пользователя</a>
+                                        <a class="nav-link"
+                                            href="{{ url_for('profile', username = current_user.username) }}">Профиль
+                                            пользователя</a>
                                     </li>
                                     {% elif url == url_for('profile', username=current_user.username) %}
                                     <li class="nav-item px-2">
                                         <a class="nav-link" href="{{ url_for('logout') }}">Выйти</a>
                                     </li>
                                     <li class="nav-item px-2">
-                                        <a class="nav-link active" aria-current="page" href="{{ url_for('profile', username = current_user.username) }}">Профиль пользователя</a>
+                                        <a class="nav-link active" aria-current="page"
+                                            href="{{ url_for('profile', username = current_user.username) }}">Профиль
+                                            пользователя</a>
                                     </li>
                                     {% else %}
                                     <li class="nav-item px-2">
                                         <a class="nav-link" href="{{ url_for('logout') }}">Выйти</a>
                                     </li>
                                     <li class="nav-item px-2">
-                                        <a class="nav-link" href="{{ url_for('profile', username = current_user.username) }}">Профиль пользователя</a>
+                                        <a class="nav-link"
+                                            href="{{ url_for('profile', username = current_user.username) }}">Профиль
+                                            пользователя</a>
                                     </li>
                                     {% endif%}
 
 
-                                </ul>   
+                                </ul>
                                 {% endblock mainmenu %}
                             </div>
                         </div>
@@ -107,11 +115,21 @@
         </div>
     </header>
 
-    <section class="mt-4">
+    <section class="mt-2">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8 col-md-12">
+                    <!-- Title -->
+                    <div class="col-lg-12 mb-1">
+                        {% if title %}
+                        <h1>{{ title }}</h1>
+                        {% else %}
+                        <h1>Коммуналка</h1>
+                        {% endif %}
+                        <hr>
+                    </div>
+                    <!-- End title -->
                     <!-- Flash messages -->
                     <div class="flash">
                         {% with messages = get_flashed_messages() %}
@@ -128,13 +146,8 @@
                     <!-- Content -->
                     <div class="content">
                         {% block content %}
-                        <!-- <p>{{ url }}</p> -->
-                        {% if title %}
-                        <h1>{{ title }}</h1>
-                        {% else %}
-                        <h1>Коммуналка</h1>
-                        {% endif %}
                         {% endblock %}
+                        <!-- <p>{{ url }}</p> -->
                     </div>
                     <!-- End content -->
                 </div>
@@ -143,7 +156,7 @@
         </div>
     </section>
 
-    <footer class="mt-4">
+    <footer class="mt-2">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-2"></div>
@@ -151,8 +164,8 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-12 footer-text text-center">
                             <p><a href="https://t.me/GrigoriyKuzevanov" target="_blank"><img
-                                style="width: 30px; margin-inline: 1em;" src="/static/files/Telegram_logo.png"
-                                alt="Telegram logo">t.me/GrigoriyKuzevanov</a></p>
+                                        style="width: 30px; margin-inline: 1em;" src="/static/files/Telegram_logo.png"
+                                        alt="Telegram logo">t.me/GrigoriyKuzevanov</a></p>
                         </div>
                         <div class="col-lg-4 col-md-12 footer-text text-center">
                             <p><a href="https://github.com/GrigoriyKuzevanov"><img
@@ -160,9 +173,9 @@
                                         alt="GitHub logo">github.com/GrigoriyKuzevanov</a></p>
                         </div>
                         <div class="col-lg-4 col-md-12 footer-text text-center">
-                            <p><a href="mailto:grkuzevanov@gmail.com"><img
-                                style="width: 30px; margin-inline: 1em;" src="/static/files/Email_logo.png"
-                                alt="Email logo">grkuzevanov@gmail.com</a></p>
+                            <p><a href="mailto:grkuzevanov@gmail.com"><img style="width: 30px; margin-inline: 1em;"
+                                        src="/static/files/Email_logo.png" alt="Email logo">grkuzevanov@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                 </div>
