--- a/my_app/templates/prices.html
+++ b/my_app/templates/prices.html
@@ -3,15 +3,40 @@
 {% block content %}
 {{ super() }}
 
+<div class="mb-3 tip">
+    <p>* Подсказки</p>
+    <ul>
+        <li>
+            <p>Введите стоимость в виде десятичной дроби</p>
+        </li>
+        <li>
+            <p>Разделитель рублей и копеек - точка</p>
+        </li>
+        <li>
+            <p>Образце ввода: 21.0 </p>
+        </li>
+    </ul>
+</div>
 <form action="/prices" method="post">
     {{ form.hidden_tag() }}
     {% for f in form if f.widget.input_type != 'hidden' %}
-    <p>
-        {{ f.label }}
-        {{ f }}
-    </p>
+    {% if f.label != form.submit.label %}
+    <div class="mb-3">
+        <div class="row g-3 align-items-center">
+            <div class="col-lg-4">
+                {{ f.label(class='col-form-label') }}
+            </div>
+            <div class="col-auto">
+                {{ f(class='form-control', size=10) }}
+            </div>
+            {% for error in f.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
     {% endfor %}
+    {{ form.submit(class='btn btn-primary') }}
 </form>
-
 
 {% endblock %}
