--- a/my_app/templates/profile.html
+++ b/my_app/templates/profile.html
@@ -3,14 +3,62 @@
 {% block content %}
 {{ super() }}
 
-<h1>Пользователь: {{ user }}</h1>
-<hr>
-<p>{{ user.username }}</p>
-<p>{{ user.email }}</p>
-<p>{{ user.reg_at.strftime("%d %b %Y, %H:%M") }}</p>
-<p>{{ user.company }}</p>
-{% for p in user.prices %}
-<p>{{ p }}</p>
-{% endfor %}
+<form action="/profile/{{ user.username }}" method="post">
+    {{ form.hidden_tag() }}
+    <div class="mb-3">
+        <div class="row g-3 align-items-center">
+            <div class="col-lg-2">
+                {{ form.username.label(class='col-form-label') }}
+            </div>
+            <div class="col-auto">
+                {{ form.username(class='form-control', size=32) }}
+            </div>
+            {% for error in form.username.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="row g-3 align-items-center">
+            <div class="col-lg-2">
+                {{ form.email.label(class='col-form-label') }}
+            </div>
+            <div class="col-auto">
+                {{ form.email(class='form-control', size=32) }}
+            </div>
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="row g-3 align-items-center">
+            <div class="col-lg-2">
+                {{ form.reg_at.label(class='col-form-label') }}
+            </div>
+            <div class="col-auto">
+                {{ form.reg_at(class='form-control', disabled=True, readonly=True, size=32, value=user.reg_at.strftime("%d %b %Y, %H:%M")) }}
+            </div>
+            {% for error in form.reg_at.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="row g-3 align-items-center">
+            <div class="col-lg-2">
+                {{ form.company.label(class='col-form-label') }}
+            </div>
+            <div class="col-auto">
+                {{ form.company(class='form-select') }}
+            </div>
+            {% for error in form.company.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+    </div>
+
+    {{ form.submit(class='btn btn-primary') }}
+</form>
 
 {% endblock %}
