--- a/my_app/templates/profile.html
+++ b/my_app/templates/profile.html
@@ -22,6 +22,32 @@
     <div class="mb-3">
         <div class="row g-3 align-items-center">
             <div class="col-lg-2">
+                {{ form.first_name.label(class='col-form-label') }}
+            </div>
+            <div class="col-auto">
+                {{ form.first_name(class='form-control', size=32) }}
+            </div>
+            {% for error in form.first_name.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="row g-3 align-items-center">
+            <div class="col-lg-2">
+                {{ form.last_name.label(class='col-form-label') }}
+            </div>
+            <div class="col-auto">
+                {{ form.last_name(class='form-control', size=32) }}
+            </div>
+            {% for error in form.last_name.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="mb-3">
+        <div class="row g-3 align-items-center">
+            <div class="col-lg-2">
                 {{ form.email.label(class='col-form-label') }}
             </div>
             <div class="col-auto">
