--- a/my_app/templates/insert_prices.html
+++ b/my_app/templates/insert_prices.html
@@ -13,7 +13,7 @@
             <p>Разделитель рублей и копеек - точка</p>
         </li>
         <li>
-            <p>Образце ввода: 21.0 </p>
+            <p>Образец ввода: 21.0 </p>
         </li>
     </ul>
 </div>
