add password reset

--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -36,5 +36,10 @@
         <a class="link" href="{{ url_for('register') }}">ссылке</a>
     </p>
 </div>
+<div class="col-auto my-4">   
+    <p>Для восстановления пароля перейдите по  
+        <a class="link" href="{{ url_for('password_reset_request') }}">ссылке</a>
+    </p>
+</div>
 
 {% endblock %}
