add password reset

--- a/my_app/templates/reset_password.html
+++ b/my_app/templates/reset_password.html
@@ -3,18 +3,22 @@
 {% block content %}
 {{ super() }}
 
-<form action="/password_reset_request" method="post">
+<form action="" method="post">
     {{ form.hidden_tag() }}
+    {% for f in form if f.widget.input_type != 'hidden' %}
+    {% if f.label != form.submit.label %}
     <div class="mb-3">
         <div class="row g-3 align-items-center">
             <div class="col-lg-2">
-                {{ form.email.label(class='col-form-label') }}
+                {{ f.label(class='col-form-label') }}
             </div>
             <div class="col-auto">
-                {{ form.email(class='form-control', size=32) }}
+                {{ f(class='form-control', size=32) }}
             </div>
         </div>
     </div>
+    {% endif %}
+    {% endfor %}
     {{ form.submit(class='btn btn-primary') }}
 </form>
 
