--- a/my_app/templates/base.html
+++ b/my_app/templates/base.html
@@ -114,10 +114,13 @@
         </div>
     </footer>
 
+</body>
+
     <!-- Подюключение bootstrap js -->
+    {{ moment.include_moment() }}
+    {{ moment.lang('ru') }}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-</body>
 
 </html>
