--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -37,7 +37,7 @@
     </p>
 </div>
 <div class="col-auto my-4">   
-    <p>Для восстановления пароля перейдите по  
+    <p>Для сброса пароля перейдите по  
         <a class="link" href="{{ url_for('password_reset_request') }}">ссылке</a>
     </p>
 </div>
