--- a/my_app/templates/show_docs.html
+++ b/my_app/templates/show_docs.html
@@ -9,7 +9,8 @@
         <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#{{ doc }}"
                 aria-expanded="false" aria-controls="{{ doc }}">
-                {{ doc.invoice_date.strftime("%d-%b-%Y") }}
+                <!-- {{ doc.invoice_date.strftime("%d-%b-%Y") }} -->
+                {{ moment(doc.invoice_date).format('LL') }}
             </button>
         </h2>
         <div id="{{ doc }}" class="accordion-collapse collapse" data-bs-parent="#accordionTable">
