--- a/my_app/templates/auth/password_reset_request.html
+++ b/my_app/templates/auth/password_reset_request.html
@@ -3,7 +3,7 @@
 {% block content %}
 {{ super() }}
 
-<form action="/password_reset_request" method="post">
+<form action="" method="post">
     {{ form.hidden_tag() }}
     <div class="mb-3">
         <div class="row g-3 align-items-center">
