--- a/my_app/templates/auth/profile.html
+++ b/my_app/templates/auth/profile.html
@@ -5,7 +5,7 @@
 
 
 <!-- <h3 class="h-form-name">Изменить данные пользователя {{ user }}</h3> -->
-<form action="/profile/{{ user.username }}" method="post">
+<form action="" method="post">
     {{ form.hidden_tag() }}
     <div class="mb-3">
         <div class="row g-3 align-items-center">
