--- a/my_app/templates/auth/register.html
+++ b/my_app/templates/auth/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 {{ super() }}
 
-<form action="/prices" method="post">
+<form action="" method="post">
     {{ form.hidden_tag() }}
     {% for f in form if f.widget.input_type != 'hidden' %}
     {% if f.label != form.submit.label %}
@@ -15,6 +15,9 @@
             <div class="col-auto">
                 {{ f(class='form-control', size=32) }}
             </div>
+            {% for error in f.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
         </div>
     </div>
     {% endif %}
