--- a/my_app/templates/email/reset_password.html
+++ b/my_app/templates/email/reset_password.html
@@ -1,7 +1,7 @@
 <p>Пользователь {{ user.username }} - запрос на сброс пароля.</p>
 <p>
     Для сброса пароля, перейдите по следующей 
-    <a href="{{ url_for('reset_password', token=token, _external=True) }}">ссылке</a>
+    <a href="{{ url_for('auth.reset_password', token=token, _external=True) }}">ссылке</a>
 </p>
 <p>Если вы не запрашивали сброс пароля, игнорируйте данное сообщение.</p>
 
