--- a/my_app/templates/includes/main_menu.html
+++ b/my_app/templates/includes/main_menu.html
@@ -9,38 +9,38 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <!-- Главная -->
-                {% if url == url_for('index') %}
+                {% if url == url_for('main.index') %}
                 <li class="nav-item px-2">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Главная
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Главная
                     </a>
                 </li>
                 {% else %}
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="{{ url_for('index') }}">Главная</a>
+                    <a class="nav-link" href="{{ url_for('main.index') }}">Главная</a>
                 </li>
                 {% endif %}
 
                 <!-- Статистика -->
-                {% if url == url_for('stats') %}
+                {% if url == url_for('main.stats') %}
                 <li class="nav-item px-2">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('stats') }}">Статистика
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('main.stats') }}">Статистика
                     </a>
                 </li>
                 {% else %}
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="{{ url_for('stats') }}">Статистика</a>
+                    <a class="nav-link" href="{{ url_for('main.stats') }}">Статистика</a>
                 </li>
                 {% endif %}
 
                 <!-- Платежные документы -->
-                {% if url == url_for('insert_docs') or url == url_for('show_docs') %}
+                {% if url == url_for('main.insert_docs') or url == url_for('main.show_docs') %}
                 <li class="nav-item dropdown px-2">
                     <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button"
                         data-bs-toggle="dropdown">Платежные документы
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ url_for('show_docs')}}">Мои документы</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('insert_docs')}}">Внести документ</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.show_docs')}}">Мои документы</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.insert_docs')}}">Внести документ</a></li>
                     </ul>
                 </li>
                 {% else %}
@@ -49,21 +49,21 @@
                         документы
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ url_for('show_docs')}}">Мои документы</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('insert_docs')}}">Внести документ</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.show_docs')}}">Мои документы</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.insert_docs')}}">Внести документ</a></li>
                     </ul>
                 </li>
                 {% endif %}
 
                 <!-- Тарифы -->
-                {% if url == url_for('insert_prices') or url == url_for('show_prices') %}
+                {% if url == url_for('main.insert_prices') or url == url_for('main.show_prices') %}
                 <li class="nav-item dropdown px-2">
                     <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button"
                         data-bs-toggle="dropdown">Тарифы
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ url_for('show_prices')}}">Мои тарифы</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('insert_prices')}}">Изменить тариф</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.show_prices')}}">Мои тарифы</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.insert_prices')}}">Изменить тариф</a></li>
                     </ul>
                 </li>
                 {% else %}
@@ -71,8 +71,8 @@
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Тарифы
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ url_for('show_prices')}}">Мои тарифы</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('insert_prices')}}">Изменить тариф</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.show_prices')}}">Мои тарифы</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('main.insert_prices')}}">Изменить тариф</a></li>
                     </ul>
                 </li>
                 {% endif %}
@@ -80,19 +80,19 @@
                 <!-- Меню пользователя -->
                 {% if current_user.is_anonymous %}
 
-                {% if url == url_for('login') %}
+                {% if url == url_for('auth.login') %}
                 <li class="nav-item px-2">
-                    <a class="nav-link active" aria-current="page" href="{{ url_for('login') }}">Войти</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('auth.login') }}">Войти</a>
                 </li>
                 {% else %}
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="{{ url_for('login') }}">Войти</a>
+                    <a class="nav-link" href="{{ url_for('auth.login') }}">Войти</a>
                 </li>
                 {% endif %}
 
                 {% else %}
 
-                {% if url == url_for('logout') or url == url_for('profile', username=current_user.username) %}
+                {% if url == url_for('auth.logout') or url == url_for('auth.profile', username=current_user.username) %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -100,12 +100,12 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item"
-                                href="{{ url_for('profile', username = current_user.username) }}">Профиль
+                                href="{{ url_for('auth.profile', username = current_user.username) }}">Профиль
                             </a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="{{ url_for('logout') }}">Выйти</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Выйти</a></li>
                     </ul>
                 </li>
                 {% else %}
@@ -116,12 +116,12 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item"
-                                href="{{ url_for('profile', username = current_user.username) }}">Профиль
+                                href="{{ url_for('auth.profile', username = current_user.username) }}">Профиль
                                 </a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="{{ url_for('logout') }}">Выйти</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Выйти</a></li>
                     </ul>
                 </li>
                 {% endif %}
