--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -9,7 +9,7 @@
 <h2>Добро пожаловать на сайт!</h2>
 {% endif %}
 {% if current_user.is_anonymous %}
-<p><a href="{{ url_for('login') }}">Войдите на сайт</a> чтобы получить доступ к функционалу</p>
+<p><a href="{{ url_for('auth.login') }}">Войдите на сайт</a> чтобы получить доступ к функционалу</p>
 {% endif %}
 
 {% endblock %}
